<resources>
    <string name="app_name">Chatto</string>
    <string name="adunit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="don_t_have_an_account">don\'t have an account ?</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <string name="email">Email</string>
    <string name="enter_your_email">enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="alredy_have_an_account">alredy have an account</string>
    <string name="enter_your_name">enter your name</string>
    <string name="full_name">full name</string>
    <string name="ahmedkhaled">Ahmed Khaled</string>
    <string name="helloworld">hello world</string>
    <string name="add">Add</string>
    <string name="write_a_psost">write a post ....</string>
    <string name="thisisasamplepost">this is a sample post</string>
    <string name="sender_name">sender name</string>
    <string name="a">A</string>
    <string name="accept">Accept</string>
    <string name="update_bio">Update Bio</string>
    <string name="enter_your_new_bio">enter your new bio</string>
    <string name="edit_your_bio">Edit Your Bio</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="log_out">Log Out</string>
    <string name="ad">Ad</string>
    <string name="app_insall_ad_icon">app insall ad icon</string>
    <string name="contentad_image">contentad_image</string>
    <string name="content_ad_logo">content ad logo</string>
    <string name="friend_reqiest_sender_image">friend reqiest sender image</string>
    <string name="write_post_button">write post button</string>
    <string name="please_wait">please wait</string>
    <string name="enter_your_mail_please">enter your mail please</string>
    <string name="enter_your_password_please">enter your password please</string>
    <string name="enter_your_name_please">enter your name please</string>
    <string name="signed_up">signed up</string>
    <string name="failled">failed</string>
    <string name="set_your_bio">set you bio</string>
    <string name="Storage_Permission">Storage Permission</string>
    <string name="permission_body">we need this permission to upload your profile photo :)</string>
    <string name="no">no</string>
    <string name="ok_thanks">OK thanks</string>
    <string name="failed_to_login">failed to login</string>
    <string name="no_connection">there is no Connection</string>
    <string name="retry">Retry</string>
    <string name="job_tag">MYTAG</string>
    <string name="cancel_request">cancel request</string>
    <string name="request_sent">your request have been sent</string>
    <string name="request_cancelled">request cancelled</string>
    <string name="failed_to_cancel_request">failed to cancel request</string>
    <string name="unfriend">unfriend</string>
    <string name="your_are_friends_now">you are friends now</string>
    <string name="failed_to_accept_request">failed to accept</string>
    <string name="profile_image_updated">profile image updated</string>
    <string name="failed_to_update_photo">failed to update photo</string>
    <string name="uploading_image">uploading your profile image</string>
    <string name="dots">....</string>
    <string name="failed_to_upload_post">failed to upload post</string>
    <string name="post_uploaded">post uploaded</string>
    <string name="post_empty">post is Empty</string>


    <string name="test_device_hash">B1A716991CB63A3ED7AE22397DD5E718</string>


    <string name="notification_body">hey!! write a post now and share it with your friends</string>
    <string name="notification_channel">reminder notification channel</string>
    <string name="settings">Settings</string>
    <string name="startChat">startChat</string>
    <string name="channelDescription">notification channel fro delivering push notification</string>

</resources>
