<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg"
    tools:context="com.ahmdkhled.wechat.activities.SignupActivity"
    >

    <TextView
        android:id="@+id/weChat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:focusableInTouchMode="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpName_label"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/fullName_IL"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/full_name"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fullName_IL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weChat_label"
            app:layout_constraintBottom_toTopOf="@id/signUp"
            app:layout_constraintStart_toStartOf="@id/password_IL"
            app:layout_constraintEnd_toEndOf="@id/password_IL"
            app:layout_constraintVertical_bias=".1"
            android:textColorHint="#67869d"
            >

            <EditText
                android:id="@+id/fullName_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:padding="5dp"
                android:background="@drawable/edittext_bg"
                android:textColor="#fff"
                android:drawableLeft="@drawable/ic_person_black_24dp" />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpEmail_label"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/email_IL"
            app:layout_constraintBottom_toBottomOf="@id/email_IL"
            app:layout_constraintStart_toStartOf="@id/signUpName_label"

            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/email"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_IL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#67869d"
            app:layout_constraintEnd_toEndOf="@id/fullName_IL"
            app:layout_constraintStart_toStartOf="@id/password_IL"
            app:layout_constraintTop_toBottomOf="@id/fullName_IL"

            >

            <EditText
                android:id="@+id/email_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:padding="5dp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/enter_your_email"
                android:drawableLeft="@drawable/ic_email_black_24dp" />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpPass_label"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#fff"
            app:layout_constraintTop_toTopOf="@id/password_IL"
            app:layout_constraintBottom_toBottomOf="@id/password_IL"
            app:layout_constraintStart_toStartOf="@id/signUpEmail_label"
            android:text="@string/password"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_IL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="#67869d"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signUpPass_label"
            app:layout_constraintTop_toBottomOf="@id/email_IL"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">
            <EditText
                android:id="@+id/password_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:padding="5dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_security_black_24dp"
                android:hint="@string/enter_your_password"
                android:drawableLeft="@drawable/ic_security_black_24dp" />

        </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/signup"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="#fff"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/gotoLogIn_BU"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/already_have_account"
            android:text="@string/alredy_have_an_account"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
             />

        <Button
            android:id="@+id/gotoLogIn_BU"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:text="@string/login"
            android:textColor="#d94255"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/already_have_account"
            app:layout_constraintBottom_toBottomOf="@id/already_have_account"
            app:layout_constraintStart_toEndOf="@id/already_have_account"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp" />

</android.support.constraint.ConstraintLayout>


